<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qwsasa"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/search_button"
        android:layout_width="65dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="6dp"
        android:background="@color/iconBtn"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:icon="@android:drawable/ic_search_category_default"
        app:iconPadding="12dp" />

    <TextView
        android:id="@+id/name_city"
        android:layout_width="409dp"
        android:layout_height="49dp"
        android:layout_below="@id/search"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/city"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_button"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/temp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/pressure"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/visibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wind"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/visibility"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/visibility"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/humidity"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/feels_like"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/wind"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/humidity"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/feels_like"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/search"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_toStartOf="@+id/search_button"
        android:autofillHints="@string/hint_user_field"
        android:fontFamily="@font/merriweather_light"
        android:hint="@string/hint_user_field"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/updatedField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/info"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="199dp"
        android:fontFamily="@font/merriweather_light"
        android:hint="@string/update_edit"
        android:textAlignment="center"
        android:textColor="@color/white" />


</RelativeLayout>