<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="115dp"
        android:layout_height="92dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:contentDescription="@string/todo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:hint="@string/hint_user_field"
        android:background="@color/white"
        android:textSize="30sp"
        android:inputType="textAutoCorrect"
        android:id="@+id/queryET"
        android:textColor="@color/black"
        android:imeOptions="actionGo"
        android:gravity="center_vertical|center_horizontal"
        android:autofillHints="" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_below="@+id/queryET"
        android:layout_centerHorizontal="true"
        android:background="#3498db"
        android:textColor="#fff"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/getWeatherTV"
        android:layout_below="@+id/backButton"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>